--- a/My_Appointment.css
+++ b/My_Appointment.css
@@ -1,11 +1,150 @@
+/* Google Fonts Link */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
 
 body {
-    background-color: #f4f4f4;
-    font-family: 'Roboto', sans-serif; 
-    padding: 0;
-    margin: 0;
-    background-color: aqua;
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+  box-sizing: border-box;
+  
 }
+
+/* Nav Bar Css Start Here*/
+nav {
+  background: #0082e6;
+  height: 80px;
+  width: 100%;
+  z-index: 50;
+  
+}
+
+label.logo {
+  color: white;
+  font-size: 25px;
+  line-height: 80px;
+  padding: 0 25px;
+  font-weight: bold;
+  }
+
+nav ul {
+  float: right;
+  margin-right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  
+}
+
+a.active,
+a:hover {
+  background:#30a5ff;
+  transition: .5s;
+}
+
+.checkbtn {
+  font-size: 22px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+
+@media(max-width: 1050px) {
+  label.logo {
+    padding-left: 30px;
+  }
+
+  nav ul li a {
+    font-size: 16px;
+  }
+}
+
+
+/* Responsive media query code for small screen */
+@media (max-width: 1005px) {
+  .checkbtn {
+    display: block;
+  }
+
+  label.logo {
+    font-size: 22px;
+  }
+
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a {
+    font-size: 20px;
+  }
+
+  a:hover,
+  a.active {
+    background: none;
+    color: #0082e6;
+  }
+
+  #check:checked~ul {
+    left: 0;
+  }
+}
+
+.search-box{
+  width: 1200px;
+  background: white;
+  margin: 25px 0 ;
+  border-radius: 5px;
+
+}
+
+.row{
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+}
+/* Nav Bar Css Ends Here*/
+
+
+
+
+
 
 .cont1{
     display: flex;
@@ -14,7 +153,7 @@ body {
     width: 100%;
     height: 100%;
     flex-wrap: wrap;
-    background-color: rgb(13, 185, 228);
+    background-color: white;
 }
 #datetime{
     font-size: 24px;
@@ -32,8 +171,9 @@ h2{
     box-shadow: 0 0 100vh rgba(34, 55, 241, 0.9);
     display: block;
     flex-wrap: wrap;
-    background-color: aqua;
-    overflow:auto;
+    background-color: white;
+    overflow: auto;
+    
 }
 h1 {
     text-align: center;
@@ -51,7 +191,7 @@ th, td {
     text-wrap: wrap;
 }
 th {
-    background-color: #0bc52a;
+    background-color: white;
 }
 tr{
     width: 100%;
