--- a/Booking_form.css
+++ b/Booking_form.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+/* Google Fonts Link */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -13,6 +16,7 @@ body {
   padding: 20px;
   background-color: darkmagenta;
 }
+
 .container {
   position: relative;
   max-width: 700px;
